# spotify-playlist-dating-redflag-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/sample-prompt-and-output-1/: sample-.env.txt  sample-command.txt  sample-env-without-credentials.txt  sample-secrets.toml.txt  sample-spotify-link-and-command.txt
vibecheck/: main.py
vibecheck/config/: base_configuration.py  sdk_configuration.py
vibecheck/constant/: constant.py
vibecheck/helper/: validator.py  writer.py
vibecheck/sdk/: integration.py
vibecheck/web_scraper/: web_api_netlog_processor.py  web_api_scraper.py
